# ddnet

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pylintrc  .travis.yml  .typos.toml  AndroidAppSettings.cfg  BUILDING_ANDROID  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Doxyfile  README.md  announcement.txt  appveyor.yml  autoexec.cfg  autoexec_server.cfg  bam.lua  banmasters.cfg  bans.cfg  bomb_srv  bors.toml  build_wiiu.bat  circle.yml  clean.py  codecov.yml  compile.bat  configure  configure.lua  ddnet.kdev4  deny.toml  dpimanifest.manifest  example.cfg  (+14 more)
.cargo/: config.toml
.circleci/: config.yml
.github/: CODEOWNERS  labeler.yml  pull_request_template.md  style-tools.sha256
.gitlab/: build.yml
.kdev4/: ddnet.kdev4
apparmor.d/: README.md  usr.bin.ddnet-server
asdf/: Cargo.toml
asdf/src/: io.rs  lib.rs  main.rs  pool.rs  protocol.rs
asdf/tests/: test.rs
cmake/: BuildVulkanShaders.cmake  CheckAtomic.cmake  Download_GTest_CMakeLists.txt.in  FindAndroid.cmake  FindCrashdump.cmake  FindCrypto.cmake  FindCurl.cmake  FindDiscordSdk.cmake  FindExceptionHandling.cmake  FindFFMPEG.cmake  FindFFmpeg.cmake  FindFreetype.cmake  FindGLEW.cmake  FindGLib.cmake  FindGdkPixbuf.cmake  FindLibNotify.cmake  FindLibSodium.cmake  FindMiniupnpc.cmake  FindMySQL.cmake  FindNotify.cmake  FindOgg.cmake  FindOpus.cmake  FindOpusfile.cmake  FindPNG.cmake  FindPngLite.cmake  FindPnglite.cmake  FindRust.cmake  FindSDL2.cmake  FindSDL3.cmake  FindSQLite3.cmake  FindSSP.cmake  FindVulkan.cmake  FindWavPack.cmake  FindWavpack.cmake  FindWebsockets.cmake  FindZLIB.cmake  checksummed_extra.txt
conf/: ddnet.cfg  server.cfg  trainfng.cfg  votes.cfg
data/: autoexec_server.cfg  ca-ddnet.pem  license.txt  touch_controls.json
datasrc/: compile.py  content.py  crosscompile.py  datatypes.py  network.py
docs/: BENCHMARKING.md  BUILDING-android.md  BUILDING-emscripten.md  BUILDING-ios.md  BUILDING.md  CNAME  CONTRIBUTING.md  DATABASE.md  DEBUGGING.md  index.html  info.json  script.js  style.css
integration_test/: README.md
man/: DDNet-Server.6  DDNet.6  DDNet.adoc  DDNetServer.adoc  generate.sh
other/: chillerbot-ux.appdata.xml  chillerbot-ux.desktop  config_directory.bat  config_directory.sh  curl.lua  (+9 more)
src/engine/: Cargo.toml  antibot.h  autoupdate.h  client.h  config.h  console.h  console.rs  demo.h  discord.h  editor.h  encryption.h  engine.h  favorites.h  fetcher.h  font_icons.h  friends.h  ghost.h  graphics.cpp  graphics.h  hmasterserver.h  http.cpp  http.h  image.h  input.h  kernel.h  keys.h  lib.rs  map.h  mask.h  masterserver.h  message.h  notifications.h  rust.h  server.h  serverbrowser.cpp  serverbrowser.h  sound.h  sqlite.h  steam.h  storage.h  (+6 more)
src/engine/client/: autoupdate.cpp  autoupdate.h  backend_sdl.cpp  backend_sdl.h  blocklist_driver.cpp  blocklist_driver.h  checksum.h  client.cpp  client.h  debug.cpp  debug.h  demoedit.cpp  demoedit.h  discord.cpp  enums.h  favorites.cpp  fetcher.cpp  fetcher.h  friends.cpp  friends.h  ghost.cpp  ghost.h  graph.cpp  graph.h  graphics.cpp  graphics.h  graphics_defines.h  graphics_threaded.cpp  graphics_threaded.h  graphics_threaded_null.h  graphics_threaded_sprites.cpp  hhandler.cpp  hhandler.h  http.cpp  http.h  input.cpp  input.h  keynames.cpp  keynames.h  notifications.cpp  (+29 more)
src/engine/client/backend/: backend_base.cpp  backend_base.h  backend_opengl.cpp  backend_opengl3.cpp  glsl_shader_compiler.cpp  glsl_shader_compiler.h
src/engine/client/backend/null/: backend_null.cpp  backend_null.h
src/engine/client/backend/opengl/: backend_opengl.cpp  backend_opengl.h  backend_opengl3.cpp  backend_opengl3.h  opengl_sl.cpp  opengl_sl.h  opengl_sl_program.cpp  opengl_sl_program.h
src/engine/client/backend/opengles/: backend_opengles.cpp  backend_opengles.h  backend_opengles3.cpp  backend_opengles3.h  gles_class_defines.h  opengles_sl.cpp  opengles_sl_program.cpp
src/engine/client/backend/vulkan/: backend_vulkan.cpp  backend_vulkan.h
src/engine/client/sixup/: translate_game.cpp  translate_system.cpp
src/engine/docs/: client_time.txt  prediction.txt  server_op.txt  snapshots.txt
src/engine/gfx/: image.cpp  image_loader.cpp  image_loader.h  image_manipulation.cpp  image_manipulation.h
src/engine/server/: antibot.cpp  antibot.h  authmanager.cpp  authmanager.h  enums.h  fifoconsole.cpp  fifoconsole.h  hregister.cpp  hregister.h  main.cpp  name_ban.cpp  name_ban.h  register.cpp  register.h  server.cpp  server.h  server_logger.cpp  server_logger.h  snap_id_pool.cpp  snap_id_pool.h  sql_connector.cpp  sql_connector.h  sql_server.cpp  sql_server.h  sql_string_helpers.cpp  sql_string_helpers.h  upnp.cpp  upnp.h
src/engine/server/databases/: connection.cpp  connection.h  connection_pool.cpp  connection_pool.h  mysql.cpp  mysql.h  postgresql.cpp  sqlite.cpp  sqlite.h
src/engine/server/foxnet/: bans.cpp  bans.h
src/engine/shared/: AtomicOps.h  Cargo.toml  ReaderWriterQueue.h  assertion_logger.cpp  assertion_logger.h  authmanager.cpp  authmanager.h  build.rs  compression.cpp  compression.h  config.cpp  config.h  config.rs  config_pulse.h  config_variables.h  config_variables_foxnet.h  config_variables_tclient.h  console.cpp  console.h  csv.cpp  csv.h  datafile.cpp  datafile.h  demo.cpp  demo.h  dilate.cpp  dilate.h  econ.cpp  econ.h  encryption.cpp  engine.cpp  engine.h  fetcher.cpp  fetcher.h  fifo.cpp  fifo.h  fifoconsole.cpp  fifoconsole.h  file_loader.cpp  file_loader.h  (+105 more)
src/engine/shared/chillerbot/: langparser.cpp  langparser.h
src/engine/shared/snapshot/: builder.rs  delta.rs  mod.rs
src/masterping/: Cargo.toml
src/masterping/src/: main.rs
src/mastersrv/: Cargo.toml  README.md  main_mastersrv.cpp  mastersrv.cpp  mastersrv.h
src/mastersrv/src/: addr.rs  community_token.rs  config.rs  locations.rs  main.rs  quic.rs
src/net/: Cargo.toml  cbindgen.toml  client.cpp  generate_header  net.h  server.cpp
src/net/src/: buffer.rs  challenger.rs  error.rs  ffi.rs  key.rs  lib.rs  lib.rs.bak  net.rs  proto.rs  quic.rs  tw06.rs  util.rs
(+1595 files in other folders)
